--- a/groupsock/CMakeLists.txt
+++ b/groupsock/CMakeLists.txt
@@ -3,4 +3,4 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include
 
 aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} groupsock_src)
 
-add_library(groupsock STATIC ${groupsock_src})
+add_library(groupsock ${lib_style} ${groupsock_src})
