--- a/UsageEnvironment/CMakeLists.txt
+++ b/UsageEnvironment/CMakeLists.txt
@@ -3,4 +3,4 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include
 
 aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} UsageEnvironment_src)
 
-add_library(UsageEnvironment STATIC ${UsageEnvironment_src})
+add_library(UsageEnvironment ${lib_style} ${UsageEnvironment_src})
