--- a/liveMedia/CMakeLists.txt
+++ b/liveMedia/CMakeLists.txt
@@ -4,4 +4,4 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include
 
 aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} liveMedia_src)
 
-add_library(liveMedia STATIC ${liveMedia_src})
+add_library(liveMedia ${lib_style} ${liveMedia_src})
