--- a/groupsock/CMakeLists.txt
+++ b/groupsock/CMakeLists.txt
@@ -1,5 +1,5 @@
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include
-        ${CMAKE_SOURCE_DIR}/UsageEnvironment/include)
+        ${CMAKE_CURRENT_SOURCE_DIR}/../UsageEnvironment/include)
 
 aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} groupsock_src)
 
