--- a/liveMedia/CMakeLists.txt
+++ b/liveMedia/CMakeLists.txt
@@ -1,6 +1,6 @@
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include
-        ${CMAKE_SOURCE_DIR}/UsageEnvironment/include
-        ${CMAKE_SOURCE_DIR}/groupsock/include)
+        ${CMAKE_CURRENT_SOURCE_DIR}/../UsageEnvironment/include
+        ${CMAKE_CURRENT_SOURCE_DIR}/../groupsock/include)
 
 aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} liveMedia_src)
 
