--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ else()
     add_definitions(-DNDEBUG)
 endif ()
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
+add_definitions(-DALLOW_SERVER_PORT_REUSE)
 
 if (shared)
     set(lib_style "SHARED")
