chore(CMakeLists.txt): support make install

--- a/BasicUsageEnvironment/CMakeLists.txt
+++ b/BasicUsageEnvironment/CMakeLists.txt
@@ -2,6 +2,15 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include
         ${CMAKE_CURRENT_SOURCE_DIR}/../groupsock/include
         ${CMAKE_CURRENT_SOURCE_DIR}/../UsageEnvironment/include)
 
-aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} BasicUsageEnvironment_src)
+set(submodule_name BasicUsageEnvironment)
 
-add_library(BasicUsageEnvironment ${lib_style} ${BasicUsageEnvironment_src})
+aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} ${submodule_name}_src)
+
+add_library(${submodule_name} ${lib_style} ${${submodule_name}_src})
+
+install(TARGETS ${submodule_name}
+        ARCHIVE DESTINATION ${CMAKE_PREFIX_PATH}/lib)
+
+install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/
+        DESTINATION ${CMAKE_PREFIX_PATH}/include/${submodule_name}
+        FILES_MATCHING PATTERN "*.h*")
