--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,6 @@ cmake_minimum_required (VERSION 3.7)
 
 project (live555)
 option(dbg "release or debug" OFF)
-option(shared "shared or static" OFF)
 
 set (LIVE555_VERSION_MAJOR "2019")
 set (LIVE555_VERSION_MINOR "03")
@@ -13,6 +12,7 @@ set(CMAKE_CXX_STANDARD 11)
 #set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
 #set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
 #set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
+set(CMAKE_PREFIX_PATH ${CMAKE_SOURCE_DIR}/out)
 
 if (dbg)
     set(CMAKE_VERBOSE_MAKEFILE ON)
@@ -22,13 +22,6 @@ else()
     add_definitions(-DNDEBUG)
 endif ()
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
-add_definitions(-DALLOW_SERVER_PORT_REUSE)
-
-if (shared)
-    set(lib_style "SHARED")
-else()
-    set(lib_style "STATIC")
-endif ()
 
 if (${CMAKE_HOST_SYSTEM_NAME} MATCHES Darwin)
     add_definitions(-DBSD=1 -DSOCKLEN_T=socklen_t -DHAVE_SOCKADDR_LEN=1 -DTIME_BASE=int -DNEED_XLOCALE_H=1)
